# pt

./: .env  .gitignore  Cargo.toml  README.MD  README.md  pubspec.yaml
assets/sql/: init.sql
lib/: enums.dart  main.dart
lib/models/: operateModel.dart
lib/tools/: common.dart  db.dart  image.dart
lib/views/: manipulation.dart  operate.dart
linux/: CMakeLists.txt  my_application.cc
migrations/2023-11-30-140334_init_db/: down.sql  up.sql
sql/: init.sql
src/: app.rs  db.rs  init.rs  lib.rs  main.rs  schema.rs  tabs.rs
src/cmd/: mod.rs  models.rs  operator.rs
src/utils/: db.rs  exif.rs  init.rs  mod.rs
src/views/: manipulation.rs  mod.rs  models.rs  operator.rs
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
