[package]
name = "pt_plus"
version = "0.1.0"
authors = ["mtaech@outlook.com"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",
    "x11",
    "persistence",  ] }
log = "0.4"


# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
image = "0.24.7"
rfd = { version = "0.12.1",default-features = false, features = ["xdg-portal","common-controls-v6"] }
env_logger = "0.10.1"
egui_dock = {version = "0.9.0",features = ["serde"]}
chrono = { version = "0.4.31", features = ["serde"] }
strum = {version = "0.25.0",features = ["derive","strum_macros"]}
lazy_static = "1.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
js-sys = "0.3.66"
kamadak-exif = "0.5.5"
rawloader = "0.37.1"
egui-modal = "0.3.1"

[dependencies.libopenraw]
version = "0.1.2"
optional = true

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
